🐛 fix(navbar): fixed bug that caused headers to be covered when navigating to sections using navbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 html, body {
     margin: 0;
     scroll-behavior: smooth;
+    scroll-padding-top: 7rem;
     height: 100%;
 }
 
